--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   flutter_keyboard_visibility: ^6.0.0
+  share_plus: ^11.0.0
 
 dev_dependencies:
   flutter_test:
