--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "carabineros" "\0"
+            VALUE "FileDescription", "Calcular Parte" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "carabineros" "\0"
+            VALUE "InternalName", "Calcular Parte" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "carabineros.exe" "\0"
-            VALUE "ProductName", "carabineros" "\0"
+            VALUE "OriginalFilename", "calcularparte.exe" "\0"
+            VALUE "ProductName", "Calcular Parte" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
