Updates base href for web deployment
Updates the base href and script source in the index.html
file to correctly serve the web app from the specified
subdirectory. This ensures proper routing and resource loading
when the app is deployed under a different base URL.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,12 @@ jobs:
       - name: Build Flutter Web
         run: flutter build web --release --base-href /calcular_parte/
 
+      - name: Update base href and script src in index.html
+        run: |
+          REPO_NAME=${{ github.repository }}
+          sed -i 's|href="|href="/calcular_parte/|g' build/web/index.html
+          sed -i 's|src="|src="/calcular_parte/|g' build/web/index.html
+
       - name: Echo and Remove symlinks
         run: |
           echo "The following symlinks will be removed:"
