Removes symlinks after building web app
Removes symlinks from the build output to avoid deployment issues related to symbolic links.

The workflow now explicitly removes symlinks in the `build/web` directory after the Flutter web app is built.

--- a/.github/workflows/deploy_web.yml
+++ b/.github/workflows/deploy_web.yml
@@ -40,6 +40,12 @@ jobs:
       - name: Build web
         run: flutter build web --release --base-href /calcular_parte/
 
+      - name: Echo and Remove symlinks
+        run: |
+          echo "The following symlinks will be removed:"
+          find build/web -type l -exec echo {} +
+          find build/web -type l -exec rm -f {} +
+
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
