--- a/.github/workflows/deploy_web.yml
+++ b/.github/workflows/deploy_web.yml
@@ -49,8 +49,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: "web-artifact"
-          path: "build/web"
+          name: web-artifact
+          path: build/web
 
   # Tarea de despliegue
   deploy:
@@ -60,8 +60,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Configure GitHub Pages
+        uses: actions/configure-pages@v5
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
         with:
-          artifact_name: "web-artifact"
+          artifact_name: web-artifact
