Renames artifact and environment to github-pages
Updates the artifact and environment names in the deployment workflow
to reflect the use of GitHub Pages for hosting.
This change ensures consistency and clarity in the workflow configuration.

--- a/.github/workflows/deploy_web.yml
+++ b/.github/workflows/deploy_web.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: web-release
+          name: github-pages
           path: build/web
 
   deploy:
@@ -40,7 +40,7 @@ jobs:
       pages: write
       id-token: write
     environment:
-      name: web-release
+      name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
