--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   flutter_keyboard_visibility: ^6.0.0
   share_plus: ^11.0.0
   flutter_launcher_icons: ^0.14.4
+  shared_preferences: ^2.5.3
+  device_preview: ^1.3.1
 
 dev_dependencies:
   flutter_test:
