Switches to debug build for web deployment
The workflow now uses a debug build for the web deployment.
This facilitates easier debugging during testing.
Also, removes the `debugShowCheckedModeBanner` flag to enable debugging UI.

--- a/.github/workflows/deploy_web.yml
+++ b/.github/workflows/deploy_web.yml
@@ -26,7 +26,7 @@ jobs:
         run: flutter pub get
 
       - name: Build Flutter web app
-        run: flutter build web --release --base-href /calcular_parte/
+        run: flutter build web --debug --base-href /calcular_parte/
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
