--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   share_plus: ^11.0.0
   flutter_launcher_icons: ^0.14.4
   shared_preferences: ^2.5.3
+  fl_chart: ^0.70.0
 
 dev_dependencies:
   flutter_test:
